Fix character counter spacing

--- a/assets/components/character-counter/_character-counter.scss
+++ b/assets/components/character-counter/_character-counter.scss
@@ -5,6 +5,7 @@
 
   [data-char-field] {
     height: 70px;
+    margin-bottom: em(10);
 
     @include media(tablet) {
       width: auto;
